--- a/nextjs-dashboard/package.json
+++ b/nextjs-dashboard/package.json
@@ -8,11 +8,14 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
+    "@vercel/postgres": "^0.10.0",
     "autoprefixer": "10.4.20",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "clsx": "^2.1.1",
-    "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "next": "15.4.0-canary.52",
+    "next-auth": "5.0.0-beta.28",
     "postcss": "8.5.1",
     "postgres": "^3.4.5",
     "react": "latest",
@@ -24,6 +27,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^3.0.0",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3"
