--- a/nextjs-dashboard/.eslintrc.json
+++ b/nextjs-dashboard/.eslintrc.json
@@ -1,18 +1,6 @@
 {
-  "extends": ["next/core-web-vitals", "plugin:jsx-a11y/recommended"],
-  "plugins": ["jsx-a11y"],
+  "extends": ["next/core-web-vitals"],
   "rules": {
-    "jsx-a11y/alt-text": [
-      "warn",
-      {
-        "elements": ["img"],
-        "img": ["Image"]
-      }
-    ],
-    "jsx-a11y/aria-props": "warn",
-    "jsx-a11y/aria-proptypes": "warn",
-    "jsx-a11y/aria-unsupported-elements": "warn",
-    "jsx-a11y/role-has-required-aria-props": "warn",
-    "jsx-a11y/role-supports-aria-props": "warn"
+    "@next/next/no-img-element": "off"
   }
 }
